--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <-- qwertycomment -->
-<-- qwertycomment2 -->
+<-- WELCOME TO THE JUNGLE -->
     <div class="wrapper">
         <header class="header">
             <video class="header__video" src="files/Lufthansa_Cargo_Corporate_Film_(EN).mp4" autoplay muted loop></video>
